# THD-DETECTOR

.kilocode/rules/memory-bank/: architecture.md  context.md
src/app/: layout.tsx  page.tsx
src/components/: ChannelStrip.tsx  NLSSummer.tsx
src/lib/: fftAnalyzer.ts  thdMath.ts  useAudioEngine.ts
src/vst-plugin/: CMakeLists.txt  LOCAL_BUILD.md  README.md  build-windows.bat  build-windows.ps1  build.sh
src/vst-plugin/Source/: THDAnalyzerPlugin.cpp  THDAnalyzerPlugin.h  THDAnalyzerPluginEditor.cpp  THDAnalyzerPluginEditor.h
test/: bun-test.d.ts  thdMath.test.ts
